--- a/src/components/CardEditComponent/CardEditComponent.scss
+++ b/src/components/CardEditComponent/CardEditComponent.scss
@@ -30,6 +30,10 @@
     &__group {
       display: flex;
       align-items: center;
+
+      label {
+        margin-bottom: 0;
+      }
     }
 
     &__checkbox {
